--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                 <img src="yudha.jpg" alt="diah">
             </div>
             <div class="about">
-                <p>Nama :Diah Nurhasanah</p>
-                <p>Tinggal : Cibubur</p>
-                <p>Umur : 21 Tahun</p>
-                <p>Asal universitas : <br> Universitas Gunadarma</p>
-                <p>Jurusan : Ilmu komunikasi</p>
+                <p>Nama :Syaiful Yudha Platoteles</p>
+                <p>Tinggal : Depok, Jawa Barat</p>
+                <p>Pendidikan saat ini : Mahasiswa S1</p
+                <p>Universitas : <br> Universitas Muhammadiyah Prof. <br> Hamka </p>
+                <p>Jurusan : Teknik informatika</p>
             </div>
         </div>
         <div class="container2">
