--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>Nama :Syaiful Yudha Platoteles</p>
                 <p>Tinggal : Depok, Jawa Barat</p>
                 <p>Pendidikan saat ini : Mahasiswa S1</p
-                <p>Universitas : <br> Universitas Muhammadiyah Prof. <br> Hamka </p>
+                <p>Universitas : <br> Universitas Muhammadiyah Prof.Dr. Hamka </p>
                 <p>Jurusan : Teknik informatika</p>
             </div>
         </div>
