--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <img src="me.png" alt="profile">
         </div>
         <div class="hero-content">
-          <span class="badge">ABOUT ME</span>
+          <span class="badge">Syaiful Yudha Platoteles</span>
           <h1>
             I AM AVAILABLE FOR SOFTWARE ENGINEER PROJECT <br> 
             <span>SOFTWARE ENGINEER </span>PROJECT
