--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <span>Award Winning</span>
             </div>
           </div>
-          <a href="#" class="btn">GET IN TOUCH</a>
+          <a href="https://github.com/Platotel3s" class="btn">GET IN TOUCH</a>
         </div>
       </div>
     </section>
