Tambah Fitur auto type

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" type="" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <button id="theme-toggle" class="theme-toggle">
@@ -46,7 +46,7 @@
     <script src="script.js"></script>
     <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
     <script>
-      var typed=new Typed(".badge",{
+      var typed=new Typed("#auto-type",{
         strings:["Syaiful Yudha Platoteles"],
         typeSpeed:150,
         backSpeed:100,
