Tambah Fitur auto type

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="me.png" alt="profile">
       </div>
       <div class="hero-content">
-        <span id="auto-type" class="badge">Syaiful Yudha Platoteles</span>
+        <span id="auto-type" class="badge"></span>
         <h1> I AM AVAILABLE FOR SOFTWARE ENGINEER PROJECT <br> <span>SOFTWARE ENGINEER </span>PROJECT </h1>
         <p> I'm a college student of Muhammadiyah University Prof. Dr. Hamka As a computer science student, i'm looking for a company for my development skills, such as writing code, writing documentations, maintenance code, etc. Usually, i'm struggling in laravel, ReactJS, TypeScript for website development. For mobile, i'm interested in React-Native & Flutter. </p>
         <div class="stats">
@@ -45,8 +45,8 @@
       if (autoTypeElement) {
         var typed = new Typed(autoTypeElement, {
           strings: ["Syaiful Yudha Platoteles"],
-          typeSpeed: 150,
-          backSpeed: 100,
+          typeSpeed: 50,
+          backSpeed: 50,
           loop: true,
         });
       }
