--- a/index.html
+++ b/index.html
@@ -1,56 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <button id="theme-toggle" class="theme-toggle">
-    <span class="theme-icon">🌙</span>
-  </button>
-  <section class="hero">
-    <div class="hero-container">
-      <div class="hero-image">
-        <img src="me.png" alt="profile">
-      </div>
-      <div class="hero-content">
-        <span id="auto-type" class="badge"></span>
-        <h1> I AM AVAILABLE FOR SOFTWARE ENGINEER PROJECT <br> <span>SOFTWARE ENGINEER </span>PROJECT </h1>
-        <p> I'm a college student of Muhammadiyah University Prof. Dr. Hamka As a computer science student, i'm looking for a company for my development skills, such as writing code, writing documentations, maintenance code, etc. Usually, i'm struggling in laravel, ReactJS, TypeScript for website development. For mobile, i'm interested in React-Native & Flutter. </p>
-        <div class="stats">
-          <div class="stat">
-            <h3>20+</h3>
-            <span>Google Review</span>
-          </div>
-          <div class="stat">
-            <h3>2+</h3>
-            <span>Years Experience</span>
-          </div>
-          <div class="stat">
-            <h3>5+</h3>
-            <span>Award Winning</span>
-          </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
+  </head>
+  <body>
+    <button id="theme-toggle" class="theme-toggle">
+      <span class="theme-icon">🌙</span>
+    </button>
+    <section class="hero">
+      <div class="hero-container">
+        <div class="hero-image">
+          <img src="me5.png" alt="profile">
         </div>
-        <a href="" class="btn">GET IN TOUCH</a>
+        <div class="hero-content">
+          <span id="auto-type" class="badge"></span>
+          <h1> I AM AVAILABLE FOR SOFTWARE ENGINEER PROJECT <br> <span>SOFTWARE ENGINEER </span>PROJECT </h1>
+          <p> I'm a college student of Muhammadiyah University Prof. Dr. Hamka As a computer science student, i'm looking for a company for my development skills, such as writing code, writing documentations, maintenance code, etc. Usually, i'm struggling in laravel, ReactJS, TypeScript for website development. For mobile, i'm interested in React-Native & Flutter. </p> 
+          <a href="https://github.com/Platotel3s" class="btn">GET IN TOUCH</a>
+        </div>
       </div>
-    </div>
-  </section>
-  <script src="script.js"></script>
-  <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const autoTypeElement = document.getElementById('auto-type');
-      if (autoTypeElement) {
-        var typed = new Typed(autoTypeElement, {
-          strings: ["Syaiful Yudha Platoteles"],
-          typeSpeed: 50,
-          backSpeed: 50,
-          loop: true,
-        });
-      }
-    });
-  </script>
-</body>
+    </section>
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const autoTypeElement = document.getElementById('auto-type');
+        if (autoTypeElement) {
+          var typed = new Typed(autoTypeElement, {
+            strings: ["Syaiful Yudha Platoteles"],
+            typeSpeed: 50,
+            backSpeed: 50,
+            loop: true,
+          });
+        }
+      });
+    </script>
+  </body>
 </html>
