--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
               <p>Flutter learning modules compiled based on personal experience</p>
             </div>
           </div>
+          <div class="project-card">
+            <div class="icon-project">
+              <i class="fa-brands fa-flutter"></i>
+            </div>
+            <div class="desc-project">
+              <h3>Weather App</h3>
+              <p>weather forecast application based on the area searched by the user</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
